# schema-library

./: .gitignore  .yamllint.yml  LICENSE.txt  README.md  pyproject.toml  random.yml  tasks.py
.github/: file-filters.yml
.github/workflows/: ci.yml
base/: circuit.yml  dcim.yml  ipam.yml  location.yml  organization.yml  third_party.yml
experimental/: README.md
experimental/azure/: README.md  azure.yml
experimental/circuit_service/: README.md  circuit_service.yml
experimental/infiniband/: README.md  infiniband.yml
experimental/location_extended/: location_extended.yml
experimental/peering/: README.md  peering.yml
experimental/qos/: qos.yml
experimental/security/: security.yml
experimental/tenancy/: tenancy.yml
experimental/topology/: topology.yml
experimental/vlan-translation/: README.md  vlan-translation.yml
extensions/bgp/: README.md  bgp.yml
extensions/cable/: README.md  cable.yml
extensions/circuit/: README.md  circuit.yml
extensions/circuit_service/: README.md
extensions/cluster/: README.md  cluster.yml
extensions/compute/: README.md  compute.yml
extensions/cross_connect/: README.md  cross_connect.yml
extensions/dwdm/: README.md  dwdm.yml
extensions/firewall_policer/: README.md  firewall_policer.yml
extensions/hosting_cluster/: README.md  hosting_cluster.yml
extensions/hypervisor/: README.md  hypervisor.yml
extensions/location_extended/: README.md  location_extended.yml
extensions/location_minimal/: README.md  location_minimal.yml
extensions/modules/: README.md  modules.yml
extensions/modules_linecards/: README.md  (+1 more)
(+53 files in other folders)
